--- a/stock.html
+++ b/stock.html
@@ -7,6 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/stock.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script>
+        $(function(){
+            $('#menu_tab_btn').on('click', () => {
+                $('.menu_tab').animate({width:'toggle'},400);
+                $('#main').on('click',() => {
+                    $('.menu_tab').css({display : 'none'});
+                })
+            })
+        })
+    </script>
     <title>내 돈 관리</title>
 </head>
 <body>
@@ -14,18 +25,20 @@
         <header class="header" id="header">
             <h1>주식 관리</h1>
             <div class="header_menu">
-                <i class="bi bi-list"></i>
+                <i id='menu_tab_btn' class="bi bi-list fs-4"></i>
                 <p>S&P 1555 (+0.00) 0.0%</p>
                 <p>달러 1322 (+0.00) 0.0%</p>
             </div>
-            <div class="menu_tab">
+            <div class="menu_tab bg-secondary">
                 <ul>
-                    <li>주식 관리</li>
-                    <li>포트폴리오</li>
-                    <li>재무제표</li>
-                    <li>주요경제 지표</li>
+                    <li><a>주식 관리</a></li>
+                    <li><a>포트폴리오</a></li>
+                    <li><a>재무제표</a></li>
+                    <li><a>주요경제 지표</a></li>
                 </ul>
             </div>
+        </header>
+        <main class="main" id="main">
             <div class="category_btn mb-3">
                 <button class="btn btn-warning">전체</button>
                 <button class="btn btn-warning">주식</button>
@@ -55,8 +68,6 @@
                     </li>
                 </ul>
             </div>
-        </header>
-        <main class="main" id="header">
             <table class="stock-list table mb-5">
                 <thead>
                     <tr>
@@ -97,19 +108,19 @@
                     <div class="modal-body">
                         <table class="add-list table">
                             <tr>
-                                <th><label for="">날짜</label></th>
-                                <th><label for="">종목명</label></th>
-                                <th><label for="">매입가</label></th>
-                                <th><label for="">수량</label></th>
-                                <th><label for="">카테고리</label></th>
+                                <th class="col-auto"><label class='form-label' for="">날짜</label></th>
+                                <th class="col-auto"><label class='form-label' for="">종목명</label></th>
+                                <th class="col-auto"><label class='form-label' for="">매입가</label></th>
+                                <th class="col-auto"><label class='form-label' for="">수량</label></th>
+                                <th class="col-auto"><label class='form-label' for="">카테고리</label></th>
                             </tr>
             
                             <tr>
-                                <td><input type="text" name="date"></td>
-                                <td><input type="text" name="name"></td>
-                                <td><input type="text" name="price"></td>
-                                <td><input type="text" name="count"></td>
-                                <td><select name="category">
+                                <td><input class='form-control form-control-sm' type="text" name="date"></td>
+                                <td><input class='form-control form-control-sm' type="text" name="name"></td>
+                                <td><input class='form-control form-control-sm' type="text" name="price"></td>
+                                <td><input class='form-control form-control-sm' type="text" name="count"></td>
+                                <td><select class='form-select form-select-sm' name="category">
                                         <option value="kor_stock">국내주식</option>
                                         <option value="for_stock">해외주식</option>
                                         <option value="bond">채권</option>
