balance sheet processing

--- a/stock.html
+++ b/stock.html
@@ -123,8 +123,8 @@
                                 <td><select class='form-select form-select-sm' name="category">
                                         <option value="kor_stock">국내주식</option>
                                         <option value="for_stock">해외주식</option>
-                                        <option value="bond">채권</option>
-                                        <option value="real">실물자산</option>
+                                        <option value="bond">채권ETF</option>
+                                        <option value="real">실물ETF</option>
                                     </select>
                                 </td>
                             </tr>
