--- a/index.html
+++ b/index.html
@@ -5,28 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>내 돈 관리</title>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script>
+        $(function(){
+            $('#menu_tab_btn').on('click', () => {
+                $('.menu_tab').animate({width:'toggle'},400);
+                $('.menu_tab li').toggle();
+                $('#main').on('click',() => {
+                    $('.menu_tab').css({display : 'none'});
+                    $('.menu_tab li').css({display : 'none'})
+                })}
+        )})
+    </script>
+    <title>주재파악</title>
 </head>
 <body>
     <div class="container">
-        <h1>어플 이름</h1>
-        <div class="menu_tab">
-            <button class="btn btn-warning">주식 관리</button>
-            <p>보유 주식 수량을 정리하는 탭</p>
-        </div>
-        <div class="menu_tab">
-            <button class="btn btn-warning">포트폴리오</button>
-            <p>포트폴리오 데이터를 확인하는 탭</p>
-        </div>
-        <div class="menu_tab">
-            <button class="btn btn-warning">재무제표</button>
-            <p>자금 상황을 확인하는 탭</p>
-        </div>
-        <div class="menu_tab">
-            <button class="btn btn-warning">주요경제 지표</button>
-            <p>경제 지표를 확인하는 탭</p>
-        </div>
+        <header class="header" id="header">
+            <h1 class="hidden">주재파악</h1>
+            <div class="header_menu">
+                <i id='menu_tab_btn' class="bi bi-list fs-4"></i>
+                <p>S&P 1555 (+0.00) 0.0%</p>
+                <p>달러 1322 (+0.00) 0.0%</p>
+            </div>
+            <div class="menu_tab bg-secondary">
+                <ul>
+                    <li><a>주식 관리</a></li>
+                    <li><a>포트폴리오</a></li>
+                    <li><a>재무제표</a></li>
+                    <li><a>주요경제 지표</a></li>
+                </ul>
+            </div>
+        </header>
+        <main id="main" class="main">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2 class="hidden">사용자 메뉴</h2>
+                    <div class="row">
+                        <div class="menu_btn col">
+                            <button class="btn btn-warning">
+                                <div><i class="bi bi-bar-chart-fill"></i></div>
+                                주식 관리</button>
+                            <p>보유 주식 수량을 정리</p>
+                        </div>
+                        <div class="menu_btn col">
+                            <button class="btn btn-warning">
+                                <div><i class="bi bi-pie-chart-fill"></i></div>
+                                포트폴리오</button>
+                            <p>포트폴리오 데이터를 확인</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="menu_btn col">
+                            <button class="btn btn-warning">
+                                <div><i class="bi bi-file-earmark-spreadsheet-fill"></i></div>
+                                재무제표</button>
+                            <p>자금 상황을 확인</p>
+                        </div>
+                        <div class="menu_btn col">
+                            <button class="btn btn-warning">
+                                <div><i class="bi bi-newspaper"></i></div>
+                                주요경제 지표</button>
+                            <p>경제 지표를 확인</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h2>주요 뉴스</h2>
+                </div>
+            </div>
+        </main>
+        <footer id='footer' class="footer">
+            <div class="row">
+                <ul class="footer_menu bg-warning">
+                    <li><a href=""><div><i class="bi bi-bell"></i></div>알림</a></li>
+                    <li><a href=""><div><i class="bi bi-building"></i></div>My자산</a></li>
+                    <li><a href=""><div><i class="bi bi-piggy-bank"></i></div>복리 계산기</a></li>
+                    <li><a href=""><div><i class="bi bi-calculator"></i></div>대출 계산기</a></li>
+                </ul>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
