--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.json">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -88,5 +89,13 @@
             </div>
         </footer>
     </div>
+    <script>
+        // 서비스워커 등록
+        if('serviceWorker' in navigator) {
+            navigator.serviceWorker
+            .register('./root/service_worker.js')
+            .then( () => console.log('service_worker registered'))
+        }
+    </script>
 </body>
 </html>
