--- a/compound.html
+++ b/compound.html
@@ -18,9 +18,33 @@
                     $('.menu_tab').css({display : 'none'});
                     $('.menu_tab li').css({display : 'none'})
                 })})
-            $('#i_button').click( ()=>{
-                $('#i_result').css({"display":'block'})
+            $('#i_btn').click(() => {
+                $('#i_btn').addClass('btn-dark').removeClass('btn-light');
+                $('#a_btn').removeClass('btn-dark').addClass('btn-light');                
+                $('.installment').removeClass('hidden');
+                $('.accumulate').addClass('hidden');
             })
+            $('#a_btn').click(() => {
+                $('#i_btn').removeClass('btn-dark').addClass('btn-light');
+                $('#a_btn').addClass('btn-dark').removeClass('btn-light'); 
+                $('.installment').addClass('hidden');
+                $('.accumulate').removeClass('hidden');
+            })
+            $(window).resize(()=>{
+                if(window.innerWidth > 768){
+                    $('.installment').removeClass('hidden')
+                    $('.accumulate').removeClass('hidden')
+                } else {
+                    $('.accumulate').addClass('hidden')
+                }
+            })
+            
+            // if(window.innerWidth > 755){
+            //     $('.installment').removeClass('hidden')
+            //     $('.accumulate').removeClass('hidden')
+            // } else {
+            //     $('.accumulate').addClass('hidden')
+            // }
         })
     </script>
     <title>주재파악</title>
@@ -44,8 +68,8 @@
             </div>
         </header>
         <main id="main" class="main mb-5">
-            <button class='select_btn btn btn-light'>거치식</button>
-            <button class='select_btn btn btn-light'>적립식</button>
+            <button id='i_btn' class='select_btn btn btn-light'>거치식</button>
+            <button id='a_btn' class='select_btn btn btn-light'>적립식</button>
             <div class='row'>
                 <div class='installment col-md-6'>
                     <h2>거치식</h2>
@@ -77,7 +101,7 @@
                         </table>
                     </div>
                 </div>
-                <div class='accumulate col-md-6'>
+                <div class='accumulate col-md-6 hidden'>
                     <h2>적립식</h2>
                     <div>
                         <label for="a_origin">투자원금</label>
