--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- manifest, theme -->
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#ffffff">
+    <!-- viewport, favicon -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="512x512" href="images/gold-512.png">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -94,7 +98,7 @@
         // 서비스워커 등록
         if('serviceWorker' in navigator) {
             navigator.serviceWorker
-            .register('./root/service_worker.js')
+            .register('./service_worker.js')
             .then( () => console.log('service_worker registered'))
         }
     </script>
