--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- manifest, theme -->
-    <link rel="manifest" href="/manifest.json">
+    <!-- <link rel="manifest" href="/manifest.json"> -->
     <meta name="theme-color" content="#ffffff">
     <!-- viewport, favicon -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,15 +29,16 @@
 </head>
 <body>
     <div class="container">
-        <header class="header" id="header">
+        <header class="header row" id="header">
             <h1 class="hidden">주재파악</h1>
-            <div class="header_menu">
+            <div class="header_menu bg-warning">
                 <i id='menu_tab_btn' class="bi bi-list fs-4"></i>
                 <p>S&P 1555 (+0.00) 0.0%</p>
                 <p>달러 1322 (+0.00) 0.0%</p>
             </div>
             <div class="menu_tab bg-secondary">
                 <ul>
+                    <li><a>홈</a></li>
                     <li><a>주식 관리</a></li>
                     <li><a>포트폴리오</a></li>
                     <li><a>재무제표</a></li>
@@ -46,8 +47,11 @@
             </div>
         </header>
         <main id="main" class="main">
+            <blockquote>
+                <p class="quote">"부자가 되는 비결은 근로소득을 최대한 빨리 투자 소득이나 패시브 소득으로 바꾸는 데 있습니다"<br><span class="quote_by">- 로버트 기요사키 -</span></p>
+            </blockquote>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 mb-5">
                     <h2 class="hidden">사용자 메뉴</h2>
                     <div class="row">
                         <div class="menu_btn col">
@@ -83,24 +87,24 @@
                 </div>
             </div>
         </main>
-        <footer id='footer' class="footer">
+        <footer id='footer' class="footer container" style="position:fixed; bottom:0;">
             <div class="row">
                 <ul class="footer_menu bg-warning">
-                    <li><a href=""><div><i class="bi bi-bell"></i></div>알림</a></li>
-                    <li><a href=""><div><i class="bi bi-building"></i></div>My자산</a></li>
-                    <li><a href=""><div><i class="bi bi-piggy-bank"></i></div>복리 계산기</a></li>
-                    <li><a href=""><div><i class="bi bi-calculator"></i></div>대출 계산기</a></li>
+                    <li><a href=""><div class="mb-2"><i class="bi bi-bell"></i></div>알림</a></li>
+                    <li><a href=""><div class="mb-2"><i class="bi bi-building"></i></div>My자산</a></li>
+                    <li><a href="compound.html"><div class="mb-2"><i class="bi bi-piggy-bank"></i></div>복리 계산기</a></li>
+                    <li><a href=""><div class="mb-2"><i class="bi bi-calculator"></i></div>대출 계산기</a></li>
                 </ul>
             </div>
         </footer>
     </div>
     <script>
         // 서비스워커 등록
-        if('serviceWorker' in navigator) {
-            navigator.serviceWorker
-            .register('./service_worker.js')
-            .then( () => console.log('service_worker registered'))
-        }
+        // if('serviceWorker' in navigator) {
+        //     navigator.serviceWorker
+        //     .register('./service_worker.js')
+        //     .then( () => console.log('service_worker registered'))
+        // }
     </script>
 </body>
 </html>
