--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <style>
+        .news li {
+            padding:10px;
+        }
+    </style>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script>
@@ -82,8 +88,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 news">
                     <h2>주요 뉴스</h2>
+                    <ul>
+                        <li>한국, 기준금리 올리기로 결정</li>
+                        <li>부동산 경기 악화, 한달 사이 2% 가격 급락</li>
+                        <li>비트코인 2천만원 선에서 횡보</li>
+                        <li>내일 CPI 지수 발표 앞두고, 전문가의 의견은?</li>
+                        <li>한국경제</li>
+                    </ul>
                 </div>
             </div>
         </main>
